Modificando enlace de la imagen

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <h1>Diagrama BPMN</h1>
         <h2>oe_integrador_VarelaSosa</h2>
-        <img src="/assets/diagrama_bpmn.png" alt="Nuestro diagrama BPMN">
+        <img src="assets/diagrama_bpmn.png" alt="Nuestro diagrama BPMN">
         <h1>Web básica con nuestro Chatbot en DialogFlow↘️</h1>
         <h3>Tema: Atención al cliente</h3>
     </header>
